worked on issue #27, nicer default styles on mobile

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -5,8 +5,13 @@ body {
 	font-size: 14px;
 }
 .demo_wrapper {
-	width: 40%;
+	width: 50%;
 	margin: 0 auto;
+}
+@media only screen and (max-device-width: 800px), screen and (max-width: 800px) {
+  .demo_wrapper {
+    width: 80%;
+  }  
 }
 .demo_block {
 	width: 100%;
