--- a/src/slippry.scss
+++ b/src/slippry.scss
@@ -14,11 +14,12 @@
  
 @import "compass";
 
-$color_high: #e24b70;
-$color_gray: #ccc;
-$controls_size: 2.8em;
-$pager_size: 1.2em;
-$trans_ease: ease;
+$color_high: #e24b70;     // highlight colour
+$color_gray: #ccc;        // neutral colour
+$controls_size: 2.8em;    // size of the next/ prev buttons
+$pager_size: 1.2em;       // size of the pager bubbles
+$trans_ease: ease;        // easing for the transitions
+$mobile_break: 600px;     // breakpoint to use some special mobile styling
 
 /* -------------------------- MIXINS ---------------------------------- */
 
@@ -37,23 +38,20 @@ $trans_ease: ease;
   } 
 }
 
-@mixin animation ($delay, $animation) {
-  -webkit-animation-delay: $delay;
+@mixin animation ($animation) {
   -webkit-animation-name: $animation;
   -webkit-animation-fill-mode: forwards;
-  -moz-animation-delay: $delay;
   -moz-animation-name: $animation;
   -moz-animation-fill-mode: forwards;
-  -o-animation-delay: $delay;
   -o-animation-name: $animation;
   -o-animation-fill-mode: forwards;
-  animation-delay: $delay;
   animation-name: $animation;
   animation-fill-mode: forwards;
 }
 
 /* -------------------------- END MIXINS ---------------------------------- */
 
+/* kenBurns animations, very basic */
 @include keyframes(left-right) {
   0% {
     @include transform(translateY(-20%) translateX(-10%));
@@ -70,18 +68,18 @@ $trans_ease: ease;
     @include transform(translateY(-20%) translateX(-10%));
   }
 }
-
+/* added to the original element calling slippry */
 .sy-box {
   &.sy-loading {
     .sy-slides-wrap, .sy-pager {
       visibility: hidden;
     }
-    background: url(assets/sy-loader.gif) 50% 50% no-repeat;
+    background: url(assets/img/sy-loader.gif) 50% 50% no-repeat;
     @include background-size(32px);
     min-height: 40px;
   }
 }
-
+/* element that wraps the slides */
 .sy-slides-wrap {
   position: relative;
   height: 100%;
@@ -92,14 +90,14 @@ $trans_ease: ease;
     }
   }
 }
-
+/* element that crops the visible area to the slides */
 .sy-slides-crop {
   height: 100%;
   width: 100%;
   position: absolute;
   overflow: hidden;
 }
-
+/* list containing the slides */
 .sy-list {
   &.horizontal {
     @include transition(left $trans_ease);
@@ -109,15 +107,15 @@ $trans_ease: ease;
   list-style: none;
   margin: 0;
   padding: 0;
-  position: absolute;  
+  position: absolute;
 }
-
+/* single slide */
 .sy-slide {
-  position: absolute;       
+  position: absolute;
   width: 100%;
   z-index: 2;
   &.fade.useCSS.transition {
-    @include transition(opacity $trans_ease);            
+    @include transition(opacity $trans_ease);
   }
   &.kenburns {
     width: 140%;
@@ -125,10 +123,10 @@ $trans_ease: ease;
     &.useCSS {
       &.sy-ken {
         &:nth-child(1n) {
-          @include animation(0, left-right);
+          @include animation(left-right);
         }
         &:nth-child(2n) {
-          @include animation(0, right-left);
+          @include animation(right-left);
         }
       }  
       &.transition {
@@ -153,7 +151,7 @@ $trans_ease: ease;
     }
   }
 }
-
+/* next/ prev buttons, with arrows and clickable area a lot larger than the visible buttons */
 .sy-controls {
   display: none;
   list-style: none;
@@ -201,7 +199,7 @@ $trans_ease: ease;
       }
       &:after {
         content: "";
-        background-image: url(assets/arrows.svg);
+        background-image: url(assets/img/arrows.svg);
         background-repeat: no-repeat;
         @include background-size(cover);
         text-align: center;
@@ -221,8 +219,23 @@ $trans_ease: ease;
       }
     }
   }  
+  @media only screen and (max-device-width : $mobile_break) {
+    display: block;
+    $controls_size: $controls_size / 2;
+    li {
+      min-width: $controls_size * 1.5;
+      a {
+        &:after {
+          width: $controls_size;
+          height: $controls_size;
+          margin-top: -$controls_size / 2;
+          margin-left: -$controls_size / 2;
+        }
+      }
+    }
+  }
 }
-
+/* captions, styled fo the overlay variant */
 .sy-caption-wrap {
   position: absolute;
   bottom: 2em;
@@ -234,7 +247,7 @@ $trans_ease: ease;
     background-color: rgba(0,0,0,0.54);
     color: #fff;        
     padding: 0.4em 1em;
-    @include border-radius(1.2em);      
+    @include border-radius(1.2em);
     a {
       &:link, &:visited {
         color: $color_high;
@@ -245,9 +258,19 @@ $trans_ease: ease;
         text-decoration: underline;
       }
     }
+  }
+  @media only screen and (max-device-width : $mobile_break), screen and (max-width : $mobile_break) {
+    left: 0;
+    bottom: 0.4em;
+    .sy-caption {
+      left: 0;
+      padding: 0.2em 0.4em;
+      font-size: 0.92em;
+      @include border-radius(0);
+    }  
   }  
 }
-
+/* pager bubbles */
 .sy-pager {
   @include clearfix;
   display: block;
@@ -282,9 +305,9 @@ $trans_ease: ease;
       @include background-size(2em);
       @include border-radius(50%);
     }
-  }    
+  }
 }
-
+/* element to "keep/ fill" the space of the content, gets intrinsic height via js */
 .sy-filler {
   width: 100%;
   &.ready {
